# apinotificacions

./: .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  compose.yaml
src/: main.rs
