[package]
name = "apinotificacion"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
gcp_auth = "0.10"
dotenv = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
